crates/au-cli/tests/it/snapshots/it__scenarios__docs-about-syntax-clean.snap
---
source: crates/au-cli/tests/it/scenarios.rs
expression: rendered
---
{
  "diagnostics": [],
  "instances": {
    "aborted_at_load": false,
    "count": 2,
    "entries": [
      {
        "body_events": null,
        "claim": [
          "au.engine.repo::au-engine"
        ],
        "closure": [
          "au.engine.repo::au-engine"
        ],
        "effective_shape": [
          {
            "divergent": false,
            "field": "deps",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": false,
                "shape": "au.engine.dep::au-engine[]"
              }
            ],
            "required": false,
            "shape": "au.engine.dep::au-engine[]"
          },
          {
            "divergent": false,
            "field": "description",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": false,
                "shape": "String"
              }
            ],
            "required": false,
            "shape": "String"
          },
          {
            "divergent": false,
            "field": "name",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": true,
                "shape": "String"
              }
            ],
            "required": true,
            "shape": "String"
          },
          {
            "divergent": false,
            "field": "remote",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": false,
                "shape": "String"
              }
            ],
            "required": false,
            "shape": "String"
          }
        ],
        "effective_values": [
          {
            "containers": [
              {
                "contributions": [
                  {
                    "location": {
                      "byte_range": {
                        "end": 29,
                        "line_col": {
                          "end": {
                            "col": 30,
                            "line": 1
                          },
                          "start": {
                            "col": 7,
                            "line": 1
                          }
                        },
                        "start": 6
                      },
                      "file": "<root>/scenarios/docs-about-syntax-clean/.arsumbris/repo.yaml"
                    },
                    "section_path": [],
                    "surface": "frontmatter",
                    "value": {
                      "kind": "scalar",
                      "value": "docs-about-syntax-clean"
                    }
                  }
                ],
                "value": {
                  "kind": "scalar",
                  "value": "docs-about-syntax-clean"
                }
              }
            ],
            "field": "name"
          }
        ],
        "file": "<root>/scenarios/docs-about-syntax-clean/.arsumbris/repo.yaml",
        "section_presence": null
      },
      {
        "body_events": [
          {
            "kind": "heading",
            "level": 1,
            "span": {
              "end": 65,
              "line_col": {
                "end": {
                  "col": 1,
                  "line": 7
                },
                "start": {
                  "col": 1,
                  "line": 6
                }
              },
              "start": 53
            },
            "text": "Reference"
          },
          {
            "content": " `[:assumptions] some value` ",
            "kind": "inline_code",
            "span": {
              "end": 228,
              "line_col": {
                "end": {
                  "col": 88,
                  "line": 9
                },
                "start": {
                  "col": 55,
                  "line": 9
                }
              },
              "start": 195
            }
          },
          {
            "body": "```yaml [:assumptions]\ntype: assumption\nclaim: \"example only — absorbed by the outer fence\"\n```\n",
            "info": "markdown",
            "kind": "fenced_block",
            "span": {
              "end": 464,
              "line_col": {
                "end": {
                  "col": 1,
                  "line": 20
                },
                "start": {
                  "col": 1,
                  "line": 14
                }
              },
              "start": 348
            }
          }
        ],
        "claim": [
          "doc"
        ],
        "closure": [
          "doc"
        ],
        "effective_shape": [
          {
            "divergent": false,
            "field": "title",
            "origins": [
              {
                "name": "doc",
                "origin_path": "<root>/scenarios/docs-about-syntax-clean/type/doc.type.yaml",
                "required": true,
                "shape": "String"
              }
            ],
            "required": true,
            "shape": "String"
          }
        ],
        "effective_values": [
          {
            "containers": [
              {
                "contributions": [
                  {
                    "location": {
                      "byte_range": {
                        "end": 47,
                        "line_col": {
                          "end": {
                            "col": 34,
                            "line": 3
                          },
                          "start": {
                            "col": 8,
                            "line": 3
                          }
                        },
                        "start": 21
                      },
                      "file": "<root>/scenarios/docs-about-syntax-clean/doc.md"
                    },
                    "section_path": [],
                    "surface": "frontmatter",
                    "value": {
                      "kind": "scalar",
                      "value": "Body contribution syntax"
                    }
                  }
                ],
                "value": {
                  "kind": "scalar",
                  "value": "Body contribution syntax"
                }
              }
            ],
            "field": "title"
          }
        ],
        "file": "<root>/scenarios/docs-about-syntax-clean/doc.md",
        "section_presence": [
          {
            "depth": 1,
            "name": "Reference",
            "optional": false,
            "path": [
              "Reference"
            ],
            "present": true,
            "span": {
              "end": 65,
              "line_col": {
                "end": {
                  "col": 1,
                  "line": 7
                },
                "start": {
                  "col": 1,
                  "line": 6
                }
              },
              "start": 53
            }
          }
        ]
      }
    ]
  }
}
